<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DisplayContact"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:background="#cdfbeaec">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="82dp"
        android:ems="20"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPhone"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_below="@+id/editTextName"
        android:ems="20"
        android:inputType="phone|text"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPhone"
        android:layout_below="@+id/editTextPhone"
        android:layout_marginTop="22dp"
        android:ems="20"
        android:inputType="textEmailAddress"
        android:layout_alignRight="@+id/editTextPhone"
        android:layout_alignEnd="@+id/editTextPhone"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextStreet"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/street"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:ems="20"
        android:inputType="textPostalAddress"
        android:layout_alignRight="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail">
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextZip"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/zip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextStreet"
        android:layout_below="@+id/editTextStreet"
        android:layout_marginTop="30dp"
        android:ems="20"
        android:inputType="textPostalAddress"
        android:layout_alignRight="@+id/editTextStreet"
        android:layout_alignEnd="@+id/editTextStreet"/>

    <Button
        android:id="@+id/save_contact_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="saveContact"
        android:text="@string/save"
        android:background="#a81d7b1d"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/phone_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CallContact"
        android:text="@string/Call"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editTextZip"
        android:layout_alignEnd="@+id/editTextZip"
        android:background="#a81d7b1d"/>

</RelativeLayout>
 </ScrollView>
