<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="publish.android.lizalinto.pregnancytracker.Fragments.TrackerFragment"
    android:gravity="center_horizontal">

    <LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:gravity="center_vertical|center_horizontal"
              style="@style/subHeader"
              android:padding="10dp"
              android:layout_margin="6dp"
              android:id="@+id/due_linearL_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracker_dueDate"
            android:textStyle="bold"
            android:textColor="#f6143384"/>
        <TextView
            android:id="@+id/dueDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="#ff5c1a8c"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="137dp"
        android:orientation="vertical"
        android:background="@drawable/count_down_bg"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_margin="6dp">


        <TextView
            android:text="@string/tracker_countDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/countDown_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_display_2_material"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@drawable/circle"
        android:layout_gravity="center"
        android:focusable="false"
        android:gravity="center"
        android:layout_margin="6dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_week"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_tv"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:gravity="center"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textColor="#f6143384"
            android:background="@drawable/months_top"
            android:id="@+id/waitMonths_tv"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:layout_weight="1"
            android:gravity="bottom|center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textColor="#f6143384"
            android:background="@drawable/weeks_top"
            android:id="@+id/waitWeeks_tv"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:gravity="bottom|center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textColor="#f6143384"
            android:background="@drawable/days_top"
            android:id="@+id/waitDays_tv"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:gravity="bottom|center"
            android:layout_weight="1"/>
    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/progressbar"
        android:max="280"
        />

</LinearLayout>
